# prompt-pad

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.base.json  turbo.json  vite.config.ts
.github/actions/setup-macos-build/: action.yml
.github/workflows/: build-macos-mas.yml  build-macos.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: app.controller.ts  app.service.ts  main.ts
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  consts.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  entitlements.devid.plist  entitlements.mas.plist  entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: CreateTopicDialog.tsx  OnboardingWizard.tsx  SelectTopicDialog.tsx  SettingsModal.tsx  StatusBar.tsx
apps/desktop/src/hooks/: useAutoSave.ts  useAutoUpdate.ts  usePromptActions.ts  usePrompts.ts  useRepoFiles.ts  useSearch.ts  useSettings.ts  useTopicManager.ts
apps/desktop/src/i18n/: en.ts  ko.ts  types.ts
apps/desktop/src/lib/: blocks.ts  distribution.ts  fs.ts  llm-services.ts  markdown.ts  store.ts  template.ts  themes.ts  title-generator.ts
apps/desktop/src/types/: js-yaml.d.ts  (+2 more)
src/: App.tsx  consts.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: OnboardingWizard.tsx  SettingsModal.tsx  StatusBar.tsx  TemplateModal.tsx
src/components/Editor/: Editor.tsx  EditorPanel.tsx  MarkdownToolbar.tsx  MetaBar.tsx  PromptEditor.tsx
src/components/Sidebar/: PromptItem.tsx  SearchBar.tsx  Sidebar.tsx  SidebarToolbar.tsx  TopicGroup.tsx
src/components/TopicPanel/: TopicPanel.tsx
src/hooks/: useAutoSave.ts  usePrompts.ts  useSearch.ts  useSettings.ts
src/i18n/: I18nProvider.tsx  en.ts  index.ts  ko.ts
src/lib/: fs.ts  markdown.ts  store.ts  template.ts
src/types/: prompt.ts  settings.ts
(+20 files in other folders)
