[package]
name = "prompt-pad"
version = "0.1.3"
description = "A prompt editor for AI LLMs"
authors = ["Taekeun Hwang"]
edition = "2024"
license = "MIT"

[features]
default = ["tauri-plugin-updater"]
app-store = []

[lib]
name = "prompt_pad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = "2"
tauri-plugin-persisted-scope = "2"
zip = "2"
